Added admin page for users. Issue #35
